[project]
name = "clam-card-tdd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sven Marcus", email = "sven.marcus@tu-braunschweig.de"},
]
dependencies = [
    "pytest>=8.0.0",
    "pytest-sugar>=1.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
